Fix body blocker not showing correctly when scrolled down

--- a/viewer/static/less/shared/main.less
+++ b/viewer/static/less/shared/main.less
@@ -47,7 +47,7 @@ main {
 #body-blocker {
   display: none;
   z-index: @backdrop-z;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
